--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -26,7 +26,7 @@
 <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 				</div>
 				<p class='misc-detail'>Here are few other animations that I made:</p>
-				<div class="anim-container">
+				<div class="anim-container mb-2">
 					<a class='anim-object' href="https://drive.google.com/open?id=1HhXSNd_UYSQa7IF5hAppbw6pUpmZoHno" target="blank">
 						<div class='label'><p>Click to watch full movie</p></div>
 						<img src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574866923/Website/school.png" alt="animated movie">
