--- a/education.html
+++ b/education.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="About">
 		<meta name="keywords" content="Sandeep Sthapit">
+		<link rel="shortcut icon" href="asset/icon/favicon.ico" type="image/x-icon">
 		<meta name="author" content="Education">
 		<link rel="stylesheet" href="asset/css/sidebar.css" />
 		<link rel="stylesheet" href="asset/css/education.css" />
