--- a/publications.html
+++ b/publications.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="keywords" content="Sandeep Sthapit">
 		<meta name="author" content="Sandeep Sthapit">
+		<link rel="shortcut icon" href="asset/icon/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="asset/css/sidebar.css" />
 		<link rel="stylesheet" href="asset/css/publications.css" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
