--- a/experience.html
+++ b/experience.html
@@ -31,16 +31,20 @@
 						<p class='exp-date'>2016-2018</p>
 						<p class='exp-detail'>Open Learning Exchange Nepal (OLE Nepal) is a social benefit organization that provides quality accessible education through learning technology. I was part of the <a class='inner-link' href='https://pustakalaya.org/epaath/'>E-Paath</a> (an interactive digital learning platform) team which is responsible for designing and developing educational content and games. Here are some of my favorite works:</p>
 						<div class='sample-works'>
-							<a class='image-link' href='https://pustakalaya.org/epaath/activity.html?id=matcon01&lang=en&grade=2&exercise=yes'>
+							<a class='image-link' href='https://pustakalaya.org/epaath/activity.html?id=matcon01&lang=en&grade=2&exercise=yes' target="_blank">
+								<div class='label'><p>Click to Play Exercise</p></div>
 								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574793043/Website/croc.png">
 							</a>
-							<a class='image-link' href='https://pustakalaya.org/epaath/activity.html?id=matag401&lang=en&grade=4'>
+							<a class='image-link' href='https://pustakalaya.org/epaath/activity.html?id=matag401&lang=en&grade=4' target="_blank">
+								<div class='label'><p>Click to Learn Algebra</p></div>
 								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574793043/Website/algebra.png">
 							</a>
-							<a class='image-link' href='https://pustakalaya.org/epaath/activity.html?id=nepass01&lang=np&grade=3'>
+							<a class='image-link' href='https://pustakalaya.org/epaath/activity.html?id=nepass01&lang=np&grade=3' target="_blank">
+								<div class='label'><p>Click to Read Story</p></div>
 								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574793043/Website/tortoise.png">
 							</a>
-							<a class='image-link' href='https://pustakalaya.org/epaath/activity.html?id=engdpp01&lang=en&grade=6'>
+							<a class='image-link' href='https://pustakalaya.org/epaath/activity.html?id=engdpp01&lang=en&grade=6' target="_blank">
+								<div class='label'><p>Click to Learn</p></div>
 								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574793044/Website/desc.png">
 							</a>
 						</div>
