--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,18 @@
 						<p class='exp-detail'>This was our final year project for my Bachelor's of Engineering. The idea is to take multiple pictures of an object from multiple positions, to create a 3D model of the object. It used a simple robot with a mobile phone mounted to take pictures, and tag pictures with required sensor information required. The features were extracted from the images then matched to reconstruct the 3D model. The motivation behind the project was to help in the preservation of rich Nepali cultural artifacts and monuments. Numerous cultural heritage sites were devastated by the massive earthquake of 2015, but a technology that can visualize these sites would assist in reconstruction.</p>
 
 						<div class='sample-works'>
-							<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855024/Website/concept.gif" alt='concept'>
-							<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855025/Website/major.png" alt='process'>
-							<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855280/Website/output.gif" alt='output'>
+							<div class="img-container">
+								<div class='label'><p>Project Concept</p></div>
+								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855024/Website/concept.gif" alt='concept'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Project Concept</p></div>
+								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855025/Website/major.png" alt='process'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Output 3D Model</p></div>	
+								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855280/Website/output.gif" alt='output'>
+							</div>
 						</div>
 					</div>
 
@@ -33,10 +42,22 @@
 						<p class='exp-title'><strong>Treadbot</strong></p>
 						<p class='exp-detail'>Tread bot was a simple robot operating on Raspberry Pi that could be controlled by hand gestures. The hand gesture recognition was trained using HAAR Features using on OpenCV. The gestures were trained using 2000 positive images and 5000 negative images. Most of the positive images were collected manually in the university while the negative samples were collected from various screenshots of the movies or random backgrounds in the classroom. If you are interested in the training dataset, please feel free to contact me. The code for the project is available <a href="https://github.com/Sandeep-Sthapit/HandGestureDetection" target="blank">here</a>.</p>
 						<div class='sample-works'>
-							<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574852388/Website/treadbot.jpg" alt='treadbot robot image'>
-							<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574852389/Website/minor-final.png" alt='output'>
-							<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574852388/Website/positive.png" alt='positive training samples'>
-							<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574852389/Website/negative.png" alt='negative training samples'>
+							<div class="img-container">
+								<div class='label'><p>Treadbot</p></div>
+								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574852388/Website/treadbot.jpg" alt='treadbot robot image'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Hand Gesture Detection</p></div>
+								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574852389/Website/minor-final.png" alt='output'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Positive Samples</p></div>
+								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574852388/Website/positive.png" alt='positive training samples'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Negative Samples</p></div>
+								<img class='thumbnail' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574852389/Website/negative.png" alt='negative training samples'>
+							</div>
 						</div>
 					</div>
 
@@ -49,10 +70,22 @@
 						<p class='exp-title'><strong>Basketball Court</strong></p>
 						<p class='exp-detail'>As the title suggests, this project simulates a basketball court. Being a big fan of basketball, I chose this as my computer graphics project. The project is built on C++ and is completely made from scratch except for the pixel drawing function. Most of the project relates to the creation of required geometric shapes, lighting functions and motion of the ball. The code for the project is available <a href="https://github.com/Sandeep-Sthapit/BasketBallCourt" target="blank">here</a>.</p>
 						<div class='sample-works'>
-							<img class='thumbnail-1' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855024/Website/cg-ball.png" alt='ball'>
-							<img class='thumbnail-1' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855023/Website/cg-side.png" alt='court side view'>
-							<img class='thumbnail-1' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855023/Website/cg-top.png" alt='court top view'>
-							<img class='thumbnail-1' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855023/Website/cg-motion.png" alt='ball motion path'>
+							<div class="img-container">
+								<div class='label'><p>Basketball</p></div>
+								<img class='thumbnail-1' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855024/Website/cg-ball.png" alt='ball'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Rendered Side View</p></div>
+								<img class='thumbnail-1' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855023/Website/cg-side.png" alt='court side view'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Rendered Top View</p></div>
+								<img class='thumbnail-1' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855023/Website/cg-top.png" alt='court top view'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Path of the ball</p></div>
+								<img class='thumbnail-1' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855023/Website/cg-motion.png" alt='ball motion path'>
+							</div>
 						</div>
 					</div>
 
@@ -60,10 +93,22 @@
 						<p class='exp-title'><strong>123Go</strong></p>
 						<p class='exp-detail'>123Go was part of my IT-Innovation and Entrepreneurship Project which is aimed to solve public transportation problems prevalent in Kathmandu. It makes data such as arrival times, distance and availability of local communes available to people. By using an old smartphone to provide the location of the vehicle, the project tracked the vehicle position, calculated and displayed the estimated time of arrival, and drew its route on google maps.</p>
 						<div class='sample-works'>
-							<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574856314/Website/it1.png" alt='loading screen'>
-							<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574856314/Website/it2.jpg" alt='routes'>
-							<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574856314/Website/it3.jpg" alt='route map'>
-							<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574856314/Website/it4.jpg" alt='vehicles list'>
+							<div class="img-container">
+								<div class='label'><p>Loading Screen</p></div>
+								<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574856314/Website/it1.png" alt='loading screen'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Available Route Information</p></div>
+								<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574856314/Website/it2.jpg" alt='routes'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Route of Vehicle</p></div>
+								<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574856314/Website/it3.jpg" alt='route map'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>List of Vehicles</p></div>
+								<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574856314/Website/it4.jpg" alt='vehicles list'>
+							</div>
 						</div>
 					</div>
 
@@ -73,9 +118,18 @@
 						<p class='exp-detail'>nXplore was the project idea for NCell AppCamp 2015 that was developed to promote tourism in Nepal. It aimed to highlight important aspects of Nepali culture, namely food, dress, dance, arts, musical instruments, and festivals. The main purpose of the application was to provide basic information regarding each item such as a brief description of the item and where it is available. It was built on the android platform.</p>
 
 						<div class='sample-works'>
-							<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855877/Website/nxp-1.jpg" alt='sample app'>
-							<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855877/Website/nxp-2.jpg" alt='sample app'>
-							<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855877/Website/nxp-3.jpg" alt='sample app'>
+							<div class="img-container">
+								<div class='label'><p>List of Cuisines</p></div>
+								<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855877/Website/nxp-1.jpg" alt='sample app'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Nepali Foods</p></div>
+								<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855877/Website/nxp-2.jpg" alt='sample app'>
+							</div>
+							<div class="img-container">
+								<div class='label'><p>Detail on Yomari</p></div>
+								<img class='thumbnail-2' src="https://res.cloudinary.com/sandeepsthapit/image/upload/v1574855877/Website/nxp-3.jpg" alt='sample app'>
+							</div>
 						</div>
 					</div>
 				</div>
