--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@
 			<div id="sidebar"></div>
 			<div class="content">
 				<div class="intro">
-					<h2 class='section-title'>PUBLICATION & WORKSHOPS DELIVERED</h2>
+					<h2 class='section-title'>PUBLICATION, WORKSHOPS & GUIDES</h2>
 					<p class='pub-title'>PUBLICATION</p>
 					<p class='pub-paper'>Joshi S.R., Sharma M., <strong>Sthapit S.</strong> , Shrestha S., Kayastha P. (2016) 3D Modelling using
 Uncalibrated Images. In <i>NaSCoIT International IT Conference.</i> <a href="https://drive.google.com/open?id=1zagEvtKIOcJRV3jUJcNAV9LT0db5wGnL" target="blank">[PDF]</a></p>
@@ -27,12 +27,17 @@ Uncalibrated Images. In <i>NaSCoIT International IT Conference.</i> <a href="htt
 						<p class='pub-sub-title'><strong>Animation Workshop</strong></p>
 						<p class='pub-location'>Open Learning Exchange Nepal (2017)</p>
 						<p class='pub-detail'>2D Animations to Developers and Graphics Designers</p>
+						<p class='pub-detail'>Here is the <a href ="https://drive.google.com/open?id=1HuLEoDPejgvrWnaEe-gZD8vHIVpfF90r" target="blank">workshop outline</a></p>
 					</div>
 					<div class='pub-container'>
 						<p class='pub-sub-title'><strong>Web Development Workshop</strong></p>
 						<p class='pub-location'>APEX COLLEGE (2016)</p>
 						<p class='pub-detail'>Frontend Development to Bachelor of Computer Information System Students</p>
 					</div>
+
+					<p class='pub-title mt-2'>GUIDES/TUTORIALS</p>
+					<p class='pub-detail mt-1'>SVG Animation Guide for Developers [<a href ="https://drive.google.com/open?id=185Yd6_wNBtYE3ExFZWOHjuRD3X3xoKA6" target="blank">PDF</a>]</p>
+					<p class='pub-detail mb-2'>Brief Python Web Scraping Guide [<a href ="https://github.com/Sandeep-Sthapit/PythonScrapingGuide" target="blank">link</a>]</p>
 				</div>
 			</div>
 		</div>
