--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
 
 					<div class='exp-container'>
 						<p class='exp-title'><strong>123Go</strong></p>
-						<p class='exp-detail'>123Go was part of my IT-Innovation and Entrepreneurship Project which is aimed to solve public transportation problems prevalent in Kathmandu. It makes data such as arrival times, distance and availability of local communes available to people. By using an old smartphone to provide the location of the vehicle, the project tracked the vehicle position, calculated and displayed the estimated time of arrival, and drew its route on google maps.</p>
+						<p class='exp-detail'>123Go was part of my IT-Innovation and Entrepreneurship Project which is aimed to solve public transportation problems prevalent in Kathmandu. It makes data such as arrival times, distance and availability of public transportations available to people. By using an old smartphone to provide the location of the vehicle, the project tracked the vehicle position, calculated and displayed the estimated time of arrival, and drew its route on google maps.</p>
 						<div class='sample-works'>
 							<div class="img-container">
 								<div class='label'><p>Loading Screen</p></div>
