--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="content">
 				<div class="intro">
 					<h2 class='section-title'>SANDEEP STHAPIT</h2>
-					<p class='section-text'>Hello there, I am an Electronics and Communications Engineering graduate from Institute of Engineering, Pulchowk Campus, Nepal. I am interested in applying technology especially machine learning to enhance learning and health. I want to design and create accessible education technologies that are personal and adaptive to the learner's needs. I am also excited to create technologies that promote physical as well as mental well being.</p>
+					<p class='section-text'>Hello there, I am an Electronics and Communications Engineering graduate from Institute of Engineering, Pulchowk Campus, Nepal. I am interested in applying technology especially machine learning to enhance learning and health. I want to design and create accessible education technologies that are personal and adaptive to the learner's needs. I am also excited to create technologies that promote physical, mental as well as social well being.</p>
 					<p class='section-text'>Moreover, I also like creating digital arts and animations along with playing computer games or basketball. During holidays I love to go trekking in the hills and mountains.</p>
 					<div class='contact-links'>
 						<a href="mailto:sandeepsthapit@gmail.com" target="_top">
