--- a/experience.html
+++ b/experience.html
@@ -19,6 +19,12 @@
 				<div class="intro">
 					<h2 class='section-title no-bt-margin'>WORK EXPERIENCE</h2>
 					<div class='exp-container'>
+						<p class='exp-title'><strong>Research Assistant</strong></p>
+						<a href='https://ibriz.ai/' target="_blank" class='exp-work'>Nepal Applied Mathematics and Informatics Institute for Research (NAAMII)</a>
+						<p class='exp-date'>2020-Present</p>
+						<p class='exp-detail'>NAAMII is a profit-not-distributing research organization that focuses on building strong foundation for research and innovation in the field of informatics, applied mathematics and AI. My research focuses on Artifical Intelligence in Education with a special focus on evaluating the effectiveness of various interventions in Intelligent Tutoring Systems.</p>
+					</div>
+					<div class='exp-container'>
 						<p class='exp-title'><strong>Machine Learning Engineer</strong></p>
 						<a href='https://ibriz.ai/' target="_blank" class='exp-work'>iBriz.ai</a>
 						<p class='exp-date'>2018-2019</p>
