image update quiz

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -6,7 +6,7 @@
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="How much do you know about Covid-19?" />
     <meta property="og:description"        content="Quiz on covid-19" />
-    <meta property="og:image"              content="https://cdn.pixabay.com/photo/2020/03/15/10/30/virus-4933201_960_720.png" />
+    <meta property="og:image"              content="https://res.cloudinary.com/sandeepsthapit/image/upload/v1591876093/Website/covid-logo.png" />
 
     <link rel="stylesheet" href="styles.css">
     <script
