--- a/quiz/index.html
+++ b/quiz/index.html
@@ -36,7 +36,8 @@
         {{#each this}}
           <div class="question-track-item tracker-{{@index}}"><p></p></div>
         {{/each}}
-      </div>      
+      </div>
+      <span id="question-number-indicator">Question 1/15</span> 
     </script>
 
     <script id="createQuestions" type="text/x-handlebars-template">
@@ -46,26 +47,25 @@
           <h1 id="instruction-title">{{question}}</h1>
           <div class="instruction-block">
             <p class="instruction-text">{{explanation}}</p>
-            <button id="next-button" class="enter-quiz">Start Quiz</button>
+            <button id="next-button" class="enter-quiz">Start Quiz ></button>
           </div>
         </div>
 
       {{else}}
 
         <div id="question-page">
-          <p id="question-number-indicator">Question 1 of 15</p>
           <div class="question-block">
             <div class="qna-block">
               <p class="question-text">{{question}}</p>
-              <p class="explanation-text">{{explanation}}</p>
               <div id="answer-block">
                 <p class="answer-option answer-text correct-answer">{{correct}}</p>
                 {{#each other}}
                   <p class="answer-option answer-text">{{this}}</p>
                 {{/each}}
               </div>
+              <p class="explanation-text">{{explanation}}</p>
             </div>
-            <button id="next-button" class="next-question">Next</button>
+            <button id="next-button" class="next-question">Next ></button>
           </div>
         </div>
 
@@ -73,7 +73,7 @@
     </script>
     <script id="createBadge" type="text/x-handlebars-template">
       <div id="score-container">
-        <h2 class="score-text">You scored 8 out of 10.</h2>
+        <h2 class="score-text">You scored <span id='user-score' class='hl-num'>8</span> out of <span id='total-ques' class='hl-num'>10</span>.</h2>
         <h3 class="badge-text">You earned the badge of {{character}}.</h2>
         <div class="score-card">
           <img class="score-img" src={{url}}>
@@ -86,9 +86,9 @@
     </script>
 
     <div class="content">
+      <div id="tracker-section"></div>
       <div id='quiz-content'>
       </div>
-      <div id="tracker-section"></div>
     </div>
     <script type="text/javascript" src="quiz.js"></script>
   </body>
