design-fixes and badge

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -79,12 +79,14 @@
           <img class="score-img" src={{url}}>
           <p class="character-tag">{{character}}</p>
         </div>
+        <p class="character-desc">{{description}}</p>
         <div id="share-button">
           <div class="fb-share-button" data-href="https://sandeep-sthapit.github.io/quiz/index.html" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsandeep-sthapit.github.io%2Fquiz%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
         </div>
       </div>
     </script>
 
+    <div class="bg-image"></div>
     <div class="content">
       <div id="tracker-section"></div>
       <div id='quiz-content'>
