Final Modifications Made for Facebook Solution
1. Facebook Solution, 3 Ways Found
	- Read the README_ARPAN.md
	- Solution 1 + 3 = The Solution I've left
	NOTE - THESE REQURE THE badges.csv URLs to be
	NON SVGs! Faecbook Scraper is quite poor.

	- Solution 2 = Requires a Node architecture, and
	requires using a prerender middleware that confuses/tricks
	the Facebook Crawler.

	- Note - Facebook and it's security policies have made
	this type of posting quite difficult! The workaround I've
	found is still abiding by their rules, and luckily, since
	we have a constant number of 'badges', likely never over 100 (or
	even 30 for that matter), creating a script to autogenerate them
	via Python was the quickest long term solution. Ensure that the
	URLS in the data file are not SVGs, but this should be the best
	way to move forward! Ensure to rerun the script each time any
	change is done to the badges.csv (which won't be often I
	assume). While I respect Facebook for being more strict with
	their API for safety, their decisions to modify their API will
	make working with the API harder in the future. Please consider
	this when making decisions regarding social media platform APIs!

2. Python Script
	- The python script that was created ('create_html.py') will
	work via Pandas only. I recommend using a virtual environment,
	installing pandas, and then autogenerating the html files from
	the CSV file data.
	- This was the quickest workaround that could be implemented.
	Ensure that the HTML string here is proper (change any URLs or
	any links as needed in this or around the URLs found so the
	endpoint is proper!)

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url"                content="https://sandeep-sthapit.github.io/quiz/index.html" />
     <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="How much do you know about Covid-19?" />
-    <meta property="og:description"        content="Quiz on covid-19" />
+    <meta property="og:title" content="The hashtag and message described the badge I earned after taking this quiz on COVID-19! ">
+    <meta property="og:description" content="How much do you know about COVID-19? Take the quiz and share your badge!">
     <meta property="og:image"              content="https://res.cloudinary.com/sandeepsthapit/image/upload/v1591876093/Website/covid-logo.png" />
 
     <link rel="stylesheet" href="styles.css">
@@ -81,7 +81,7 @@
         </div>
         <p class="character-desc">{{description}}</p>
         <div id="share-button">
-          <div class="fb-share-button" data-href="https://sandeep-sthapit.github.io/quiz/index.html" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsandeep-sthapit.github.io%2Fquiz%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+          <button id="share-button">Share
         </div>
       </div>
     </script>
